--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
      
   <div class="container home">
 
-      <nav>
-        <div>
-          <h1>Fun Bus</h1>
-        </div>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </nav>
+    <nav>
+      <div>
+        <h1>Fun Bus</h1>
+      </div>
+      <a href="#">Home</a>
+      <a href="#">About Us</a>
+      <a href="#">Blog</a>
+      <a href="#">Contact</a>
+    </nav>
+
+    <header>
+      <img src="img/fun-bus.jpg" alt="fun bus image">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Travelling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design wesbite expedition.</p>
+    </header>
    
     <section class="content-section">
       <div class="text-content">
