--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 
 <body>
 
-  
+    <nav>
+      <div class="nav-container">
+        <div class="nav-title">
+          <h1>Fun Bus</h1>
+        </div>
+        <div class="nav-links">
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </div>
+      </div>
+    </nav>
      
   <div class="container home">
-
-    <nav>
-      <div>
-        <h1>Fun Bus</h1>
-      </div>
-      <a href="#">Home</a>
-      <a href="#">About Us</a>
-      <a href="#">Blog</a>
-      <a href="#">Contact</a>
-    </nav>
 
     <header>
       <img src="img/fun-bus.jpg" alt="fun bus image">
